monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4096/A4096d.mc4
/* (c) https://github.com/MontiCore/monticore */
package de.monticore.grammar.cocos.invalid.A4096;

grammar A4096d {

  Traverser = "traverser";

}